@@ -2,6 +2,7 @@
 -Add: Updated czech translation (by Pavel Fric)
 -Add: Read Replay Gain in more formats
 -Add: Save last 5 output directory paths (accessible through the directory combobox)
+-Add: Option to specify how the Replay Gain scanner should group files
 -Change: Close soundkonverter if --autoclose was passed, even if the main window is visible
 -Change: Remove internal Replay Gain calculation from lame plugin since it's not writing tags
 -Change: Use PATH variable to find backends
